--- a/INBIO.html
+++ b/INBIO.html
@@ -259,7 +259,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
                         <div class="right-star">
-                            <img src="./Images/img-13.png" alt="">
+                            <img src="./Images/img-13.png" alt="" style="box-shadow: rgba(0, 0, 0, 0.596) 0px 5px 15px; padding: 5px 10px;">
                         </div>
                     </div>
                     <div style="border-bottom: 1px solid black; margin: 2rem 0;">
@@ -365,7 +365,7 @@
                     </div>                  
                 </div>
             </div>
-            <div style="border-bottom: 1px solid black; margin: 6rem 0;">
+            <div style="border-bottom: 1px solid black; margin: 4rem 0 6rem 0;">
             </div>
         </div>
     </section>
@@ -450,7 +450,140 @@
                     </div>
                 </div>
             </div>
+            <div style="border-bottom: 1px solid black; margin: 6rem 0;"></div>
         </div>
     </section>
+
+    <!-- section-7 -->   
+    <section id="section-2"> 
+        <div class="container">
+            <div class="header-text">
+                <h4>VISIT MY BLOG AND KEEP YOUR FEEDBACK</h4>
+            <h1>My Blog</h1>
+            </div>
+            <div class="boxes">
+                <div class="box">
+                    <div class="box-img">
+                        <img src="./Images/img-15.png" alt="">
+                    </div>
+                    <div class="box-text-icon">
+                        <h5>DEVELOPMENT</h5>
+                        <span><i class="fa-solid fa-clock"></i>2 min read</span>
+                    </div>
+                    <div class="under-text">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-img">
+                        <img src="./Images/img-16.jpg" alt="">
+                    </div>
+                    <div class="box-text-icon">
+                        <h5>DEVELOPMENT</h5>
+                        <span><i class="fa-solid fa-clock"></i>2 hour read</span>
+                    </div>
+                    <div class="under-text">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-img">
+                        <img src="./Images/img-17.jpg" alt="">
+                    </div>
+                    <div class="box-text-icon">
+                        <h5>DEVELOPMENT</h5>
+                        <span><i class="fa-solid fa-clock"></i>5 minute read</span>
+                    </div>
+                    <div class="under-text">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>              
+            </div>
+            <div style="border-bottom: 1px solid black; margin: 4rem 0 6rem 0;">
+            </div>
+        </div>
+    </section>
+
+    <section id="section-8">
+        <div class="container">
+            <div class="header-text">
+                <h4>CONTACT</h4>
+                <h1 style="color: #C4CFDE;">Contact With Me</h1>
+            </div>
+            <div class="main">
+                <div class="left-box">
+                    <div class="img-box">
+                        <img src="./Images/img-18.png" alt="">
+                    </div>
+                    <div class="text-box">
+                        <h3>Nevine Acotanza</h3>
+                        <p>Chief Operating Officer</p>
+                        <p>I am available for freelance work. Connect with me via and call in to my account.</p>
+                        <p>Phone: <span>+01234567890</span> </p>
+                        <p>Email: <span> admin@example.com</span> </p>
+                    </div>
+                    <div class="icon-box">
+                        <h5 style="color: #989a9e;">FIND WITH ME</h5>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="right-box">
+                    <form>
+                        <div class="first">
+                            <div class="first-label">
+                                <label for="">YOUR NAME</label>
+                            <input type="text">
+                            </div>
+                            <div class="second-label">
+                                <label for="">PHONE NUMBER</label>
+                            <input type="text">
+                            </div>
+                        </div>
+                        <div class="second">
+                            <label for="">EMAIL</label>
+                            <input type="email">
+                        </div>
+                        <div class="third">
+                            <label for="">SUBJECT</label>
+                            <input type="text">
+                        </div>
+                        <div class="fourth">
+                            <label for="">YOUR MESSAGE</label>
+                            <textarea name="" id="" rows="15" style="width: 100%;"></textarea>
+                        </div>
+                        <div class="fifty">
+                            <div class="btn">
+                                <a href="#" style="color: #D60747;">SEND MESSAGE <i class="fa-solid fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div style="border-bottom: 1px solid black; margin: 6rem 0;">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="footer">
+            <img src="./Images/img-19.png" alt="">
+            <p>© 2022. All rights reserved by Rainbow-Themes.</p>
+        </div>
+    </footer>
+
+    <div class="up-arrow">
+        <a href="#"><i><i class="fa-solid fa-arrow-up"></i></i></a>
+    </div>
+
+    <div class="demos">
+        <span>D</span>
+        <span>E</span>
+        <span>M</span>
+        <span>O</span>
+        <span>S</span>
+    </div>
 </body>
 </html>
